workers success cancel miss

--- a/app/views/workers/_form.html.haml
+++ b/app/views/workers/_form.html.haml
@@ -39,5 +39,14 @@
   .field
     = f.label :password
     = f.text_field :password
+  .field
+    = f.label :success
+    = f.number_field :success
+  .field
+    = f.label :cancel
+    = f.number_field :cancel
+  .field
+    = f.label :miss
+    = f.number_field :miss
   .actions
     = f.submit 'Save'
