--- a/app/views/grabs/show.html.haml
+++ b/app/views/grabs/show.html.haml
@@ -2,10 +2,10 @@
 
 %p
   %b Worker:
-  = @grab.worker
+  = @grab.worker.mobile
 %p
   %b Appointment:
-  = @grab.appointment
+  = @grab.appointment.status
 %p
   %b Status:
   = @grab.status
