--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -20,7 +20,7 @@
     = f.text_area :description
   .field
     = f.label :gender
-    = f.number_field :gender
+    = f.text_field :gender
   .field
     = f.label :nick_name
     = f.text_field :nick_name
