--- a/app/views/appointments/index.html.haml
+++ b/app/views/appointments/index.html.haml
@@ -3,6 +3,7 @@
 %table
   %thead
     %tr
+      %th ID
       %th Status
       %th Date
       %th Start time
@@ -18,6 +19,7 @@
   %tbody
     - @appointments.each do |appointment|
       %tr
+        %td= appointment.id
         %td= appointment.status
         %td= appointment.date
         %td= appointment.start_time
