--- a/app/views/appointments/index.html.haml
+++ b/app/views/appointments/index.html.haml
@@ -33,7 +33,10 @@
           %td= appointment.service.name
         - else
           %td 无产品
-        %td= appointment.customer.mobile
+        - if appointment.customer
+          %td= appointment.customer.mobile
+        - else
+          %td 无客户
         %td= link_to 'Show', appointment
         %td= link_to 'Edit', edit_appointment_path(appointment)
         %td= link_to 'Destroy', appointment, :method => :delete, :data => { :confirm => 'Are you sure?' }
