--- a/app/assets/stylesheets/worker_streets.css.scss
+++ b/app/assets/stylesheets/worker_streets.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the steps controller here.
+// Place all the styles related to the worker_streets controller here.
 // They will automatically be included in application.css.sass.
 // You can use Sass (SCSS) here: http://sass-lang.com/
