--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,4 +5,5 @@
   / <link rel="stylesheet" type="text/css" href="http://static.emeidaojia.com/static/style_520.css">
   / <script data-main="http://static.emeidaojia.com/static/main_520" src="http://static.emeidaojia.com/static/require_520.js"></script>
   = stylesheet_link_tag  "application"
+  = stylesheet_link_tag  "#{controller.controller_name}"
   %title 管理
