--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,5 +2,6 @@
 %html
   = render :partial => 'layouts/header'
   %body
-    = yield
+    .container
+      = yield
   = render :partial => 'layouts/scripts'
