--- a/app/views/admins/registrations/new.html.haml
+++ b/app/views/admins/registrations/new.html.haml
@@ -36,4 +36,4 @@
           %div
             已有帐号，请
             \
-            =render 'customers/shared/links'
+            =render 'admins/shared/links'
