--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -35,31 +35,10 @@
               %i.fa.fa-file
               %span.hidden-sm 街道
       %li
-        %a{:href => "typography.html"}
+        %a{:href => products_path}
           %i.fa.fa-font
-          %span.hidden-sm Typography
+          %span.hidden-sm 产品
       %li
-        %a.dropmenu{:href => "ui.html#"}
+        %a.dropmenu{:href => steps_path}
           %i.fa.fa-star
-          %span.hidden-sm Icons
-        %ul
-          %li
-            %a.submenu{:href => "icons-font-awesome.html"}
-              %i.fa.fa-star
-              %span.hidden-sm Font Awesome
-          %li
-            %a.submenu{:href => "icons-halflings.html"}
-              %i.fa.fa-star
-              %span.hidden-sm Halflings
-          %li
-            %a.submenu{:href => "icons-glyphicons-pro.html"}
-              %i.fa.fa-star
-              %span.hidden-sm Glyphicons PRO
-          %li
-            %a.submenu{:href => "icons-filetypes.html"}
-              %i.fa.fa-star
-              %span.hidden-sm Filetypes
-          %li
-            %a.submenu{:href => "icons-social.html"}
-              %i.fa.fa-star
-              %span.hidden-sm Social
+          %span.hidden-sm 步骤
