--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -39,6 +39,10 @@
           %i.fa.fa-font
           %span.hidden-sm 产品
       %li
+        %a{:href => product_details_path}
+          %i.fa.fa-font
+          %span.hidden-sm 产品详情
+      %li
         %a.dropmenu{:href => steps_path}
           %i.fa.fa-star
           %span.hidden-sm 步骤
