--- a/app/views/product_details/show.html.haml
+++ b/app/views/product_details/show.html.haml
@@ -5,7 +5,7 @@
   = @product_detail.name
 %p
   %b Description:
-  = @product_detail.description
+  = raw @product_detail.description
 %p
   %b Product:
   = @product_detail.product.name
