--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,8 +6,8 @@
       %th 分类
       %th Name
       %th Pic
-      %th applicable
-      %th effect
+      -#%th applicable
+      -#%th effect
       %th
       %th
       %th
@@ -18,8 +18,8 @@
         %td= product.product_type.name
         %td= product.name
         %td= product.pic
-        %td= product.applicable
-        %td= product.effect
+        -#%td= product.applicable
+        -#%td= product.effect
         %td= link_to 'Show', product
         %td= link_to 'Edit', edit_product_path(product)
         %td= link_to 'Destroy', product, :method => :delete, :data => { :confirm => 'Are you sure?' }
