--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -31,6 +31,9 @@
     = f.label :applicable, '适用皮肤'
     = f.text_area :applicable
   .field
+    = f.label :period, '疗程周期'
+    = f.text_area :period
+  .field
     = f.label :effect, '效果'
     = f.text_area :effect
   .field
