--- a/app/views/layouts/_banner.html.haml
+++ b/app/views/layouts/_banner.html.haml
@@ -24,6 +24,6 @@
             %span.caret
           %ul.dropdown-menu
             %li
-              %a{:href => '/admins/sign_out'}
+              %a{:href => '/birds/sign_out'}
                 %i.fa.fa-off
                 退出
