--- a/app/views/layouts/_menu.html.haml
+++ b/app/views/layouts/_menu.html.haml
@@ -1,48 +1,48 @@
 .col-sm-2.main-menu-span
   .sidebar-nav.nav-collapse.collapse.navbar-collapse
     %ul.nav.nav-tabs.nav-stacked.main-menu
-      %li
-        %a{:href => workers_path}
-          %i.fa.fa-home.icon
-          %span.hidden-sm 美容师
-      %li.active
-        %a{:href => coupons_path}
-          %i.fa.fa-eye
-          %span.hidden-sm 用户优惠券
-      %li
-        %a{:href => orders_path}
-          %i.fa.fa-edit
-          %span.hidden-sm 订单
-      %li
-        %a{:href => customers_path}
-          %i.fa.fa-bar-chart-o
-          %span.hidden-sm 用户
-      %li
-        %a.dropmenu{:href => "#"}
-          %i.fa.fa-folder
-          %span.hidden-sm 地理信息
-        %ul
-          %li
-            %a.submenu{:href => cities_path}
-              %i.fa.fa-file
-              %span.hidden-sm 城市
-          %li
-            %a.submenu{:href => areas_path}
-              %i.fa.fa-file
-              %span.hidden-sm 区
-          %li
-            %a.submenu{:href => streets_path}
-              %i.fa.fa-file
-              %span.hidden-sm 街道
-      %li
-        %a{:href => products_path}
-          %i.fa.fa-font
-          %span.hidden-sm 产品
-      %li
-        %a{:href => product_details_path}
-          %i.fa.fa-font
-          %span.hidden-sm 产品详情
-      %li
-        %a.dropmenu{:href => steps_path}
-          %i.fa.fa-star
-          %span.hidden-sm 步骤
+      -#%li
+      -#  %a{:href => workers_path}
+      -#    %i.fa.fa-home.icon
+      -#    %span.hidden-sm 美容师
+      -#%li.active
+      -#  %a{:href => coupons_path}
+      -#    %i.fa.fa-eye
+      -#    %span.hidden-sm 用户优惠券
+      -#%li
+      -#  %a{:href => orders_path}
+      -#    %i.fa.fa-edit
+      -#    %span.hidden-sm 订单
+      -#%li
+      -#  %a{:href => customers_path}
+      -#    %i.fa.fa-bar-chart-o
+      -#    %span.hidden-sm 用户
+      -#%li
+      -#  %a.dropmenu{:href => "#"}
+      -#    %i.fa.fa-folder
+      -#    %span.hidden-sm 地理信息
+      -#  %ul
+      -#    %li
+      -#      %a.submenu{:href => cities_path}
+      -#        %i.fa.fa-file
+      -#        %span.hidden-sm 城市
+      -#    %li
+      -#      %a.submenu{:href => areas_path}
+      -#        %i.fa.fa-file
+      -#        %span.hidden-sm 区
+      -#    %li
+      -#      %a.submenu{:href => streets_path}
+      -#        %i.fa.fa-file
+      -#        %span.hidden-sm 街道
+      -#%li
+      -#  %a{:href => products_path}
+      -#    %i.fa.fa-font
+      -#    %span.hidden-sm 产品
+      -#%li
+      -#  %a{:href => product_details_path}
+      -#    %i.fa.fa-font
+      -#    %span.hidden-sm 产品详情
+      -#%li
+      -#  %a.dropmenu{:href => steps_path}
+      -#    %i.fa.fa-star
+      -#    %span.hidden-sm 步骤
